--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,3 +1,11 @@
+:root {
+    --white: #ffffff;
+    --gray: #d7d7d7;
+    --light-green: #90a955;
+    --dark-green: #006b6e;
+    --text: #1c1c1c;
+}
+
 body {
     display: flexbox;
     align-items: center;
@@ -6,10 +14,12 @@ body {
     height: 100vh;
     padding: 0;
     margin: 0;
+    background-color: var(--white);
 
     font: {
-        family: sans-serif;
+        family: 'Roboto', sans-serif;
         size: 1rem;
+        color: var(--text);
     }
 
     text: {
