--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -7,8 +7,7 @@
 }
 
 body {
-    display: flexbox;
-    align-items: center;
+    display: flex;
     justify-content: center;
     width: 100vw;
     height: 100vh;
