Make data widgets

--- a/components/DataTray/datatray.module.scss
+++ b/components/DataTray/datatray.module.scss
@@ -1,5 +1,6 @@
 .dataTray {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     border-radius: 10px;
