--- a/components/Orsini/orsini.module.scss
+++ b/components/Orsini/orsini.module.scss
@@ -3,4 +3,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    img {
+        position: absolute;
+        top: 3rem;
+        left: 0rem;
+    }
 }
